automatons/c_minus_project/c_minus_grammar/CMinus.java
/* CMinus.java */
/* Generated By:JavaCC: Do not edit this line. CMinus.java */
import java.util.List;
import java.util.ArrayList;

public class CMinus implements CMinusConstants {

    static List<String> my_ids = new ArrayList<String>();

    public static void main(String args[]) throws ParseException{
        CMinus parser = new CMinus(System.in);
        parser.Start();
    }

  static final public void Start() throws ParseException {
    label_1:
    while (true) {
      program();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Int:
      case Void:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
System.out.println("Finished");
  }

// Emulates epsilon
  static final public void empty() throws ParseException {
{if ("" != null) return;}
  }

  static final public void program() throws ParseException {
    declaration_list();
  }

  static final public void declaration_list() throws ParseException {
    declaration();
    declaration_list_prime();
  }

  static final public void declaration_list_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Int:
    case Void:{
      declaration();
      declaration_list_prime();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      empty();
    }
  }

  static final public void declaration() throws ParseException {
    type_specifier();
    jj_consume_token(Id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:
    case LeftSquareBracket:{
      var_declaration();
      break;
      }
    case LeftParen:{
      func_declaration();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void var_declaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:{
      jj_consume_token(Semicolon);
      break;
      }
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Number:{
        jj_consume_token(Number);
        break;
        }
      case Decimal:{
        jj_consume_token(Decimal);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RightSquareBracket);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void type_specifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Int:{
      jj_consume_token(Int);
      break;
      }
    case Void:{
      jj_consume_token(Void);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void func_declaration() throws ParseException {
    jj_consume_token(LeftParen);
    params();
    jj_consume_token(RightParen);
    compound_stmt();
  }

  static final public void params() throws ParseException {
    if (jj_2_1(2)) {
      param_list();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Void:{
        jj_consume_token(Void);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void param_list() throws ParseException {
    param();
    param_list_prime();
  }

  static final public void param_list_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Comma:{
      jj_consume_token(Comma);
      param();
      param_list_prime();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      empty();
    }
  }

  static final public void param() throws ParseException {
    type_specifier();
    jj_consume_token(Id);
    param_prime();
  }

  static final public void param_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      jj_consume_token(RightSquareBracket);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      empty();
    }
  }

  static final public void compound_stmt() throws ParseException {
    jj_consume_token(LeftBrace);
    local_declarations();
    statement_list();
    jj_consume_token(RightBrace);
  }

  static final public void local_declarations() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:
    case LeftSquareBracket:{
      var_declaration();
      local_declarations();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      empty();
    }
  }

  static final public void statement_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case If:
    case Return:
    case While:
    case Semicolon:
    case LeftParen:
    case LeftBrace:
    case Id:
    case Number:
    case Decimal:{
      statement();
      statement_list();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      empty();
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression_stmt();
      break;
      }
    case LeftBrace:{
      compound_stmt();
      break;
      }
    case If:{
      selection_stmt();
      break;
      }
    case While:{
      iteration_stmt();
      break;
      }
    case Return:{
      return_stmt();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression_stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression();
      jj_consume_token(Semicolon);
      break;
      }
    case Semicolon:{
      jj_consume_token(Semicolon);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void selection_stmt() throws ParseException {
    jj_consume_token(If);
    jj_consume_token(LeftParen);
    expression();
    jj_consume_token(RightParen);
    statement();
    selection_stmt_prime();
  }

  static final public void selection_stmt_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Else:{
      jj_consume_token(Else);
      statement();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      empty();
    }
  }

  static final public void iteration_stmt() throws ParseException {
    jj_consume_token(While);
    jj_consume_token(LeftParen);
    expression();
    jj_consume_token(RightParen);
    statement();
  }

  static final public void return_stmt() throws ParseException {
    jj_consume_token(Return);
    return_stmt_prime();
  }

  static final public void return_stmt_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:{
      jj_consume_token(Semicolon);
      break;
      }
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression();
      jj_consume_token(Semicolon);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression() throws ParseException {
    if (jj_2_2(2)) {
      var();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Equal:{
        jj_consume_token(Equal);
        expression();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        simple_expression_with_var();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LeftParen:
      case Id:
      case Number:
      case Decimal:{
        simple_expression();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void var() throws ParseException {
    jj_consume_token(Id);
    var_prime();
  }

  static final public void var_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      expression();
      jj_consume_token(RightSquareBracket);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      empty();
    }
  }

  static final public void simple_expression() throws ParseException {
    additive_expression();
    simple_expression_prime();
  }

// Modifired
  static final public void simple_expression_with_var() throws ParseException {
    additive_expression_with_var();
    simple_expression_prime();
  }

  static final public void simple_expression_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftAngularBracket:
    case RightAngularBracket:
    case LeftAngularEqual:
    case RightAngularEqual:
    case EqualEqual:
    case BangEqual:{
      relational_operator();
      additive_expression();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      empty();
    }
  }

  static final public void relational_operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftAngularEqual:{
      jj_consume_token(LeftAngularEqual);
      break;
      }
    case LeftAngularBracket:{
      jj_consume_token(LeftAngularBracket);
      break;
      }
    case RightAngularBracket:{
      jj_consume_token(RightAngularBracket);
      break;
      }
    case RightAngularEqual:{
      jj_consume_token(RightAngularEqual);
      break;
      }
    case EqualEqual:{
      jj_consume_token(EqualEqual);
      break;
      }
    case BangEqual:{
      jj_consume_token(BangEqual);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void additive_expression() throws ParseException {
    term();
    additive_expression_prime();
  }

// Modifired
  static final public void additive_expression_with_var() throws ParseException {
    term_prime();
    additive_expression_prime();
  }

  static final public void additive_expression_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Plus:{
      jj_consume_token(Plus);
      term();
      break;
      }
    case Minus:{
      jj_consume_token(Minus);
      term();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      empty();
    }
  }

  static final public void term() throws ParseException {
    factor();
    term_prime();
  }

  static final public void term_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Multiplier:{
      jj_consume_token(Multiplier);
      factor();
      term_prime();
      break;
      }
    case Slash:{
      jj_consume_token(Slash);
      factor();
      term_prime();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      empty();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:{
      jj_consume_token(LeftParen);
      expression();
      jj_consume_token(RightParen);
      break;
      }
    case Id:{
      call();
      break;
      }
    case Number:{
      jj_consume_token(Number);
      break;
      }
    case Decimal:{
      jj_consume_token(Decimal);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void call() throws ParseException {
    jj_consume_token(Id);
    jj_consume_token(LeftParen);
    args();
    jj_consume_token(RightParen);
  }

  static final public void args() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      arg_list();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      empty();
    }
  }

  static final public void arg_list() throws ParseException {
    expression();
    arg_list_prime();
  }

  static final public void arg_list_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Comma:{
      jj_consume_token(Comma);
      expression();
      arg_list_prime();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      empty();
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_23()
 {
    if (jj_scan_token(Minus)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_2()) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    if (jj_scan_token(Multiplier)) return true;
    return false;
  }

  static private boolean jj_3R_7()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) return true;
    }
    return false;
  }

  static private boolean jj_3R_10()
 {
    if (jj_scan_token(LeftSquareBracket)) return true;
    return false;
  }

  static private boolean jj_3R_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_4()
 {
    if (jj_scan_token(Equal)) return true;
    return false;
  }

  static private boolean jj_3R_9()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(6)) {
    jj_scanpos = xsp;
    if (jj_scan_token(8)) return true;
    }
    return false;
  }

  static private boolean jj_3R_3()
 {
    if (jj_scan_token(Id)) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_22()
 {
    if (jj_scan_token(Plus)) return true;
    return false;
  }

  static private boolean jj_3R_20()
 {
    if (jj_scan_token(Slash)) return true;
    return false;
  }

  static private boolean jj_3R_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_3()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_4()) {
    jj_scanpos = xsp;
    if (jj_3R_5()) return true;
    }
    return false;
  }

  static private boolean jj_3R_12()
 {
    if (jj_3R_15()) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_24()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_21()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_6()
 {
    if (jj_3R_9()) return true;
    if (jj_scan_token(Id)) return true;
    return false;
  }

  static private boolean jj_3R_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_5()
 {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_17()
 {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    return false;
  }

  static private boolean jj_3R_18()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    return false;
  }

  static private boolean jj_3R_2()
 {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_8()
 {
    if (jj_3R_12()) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_11()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public CMinusTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[25];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x140,0x140,0x15000000,0x0,0x11000000,0x140,0x100,0x2000000,0x10000000,0x11000000,0x450002a0,0x450002a0,0x5000000,0x10,0x5000000,0x80000,0x4000000,0x10000000,0xf60000,0xf60000,0x6000,0x18000,0x4000000,0x4000000,0x2000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x6,0x0,0x0,0x0,0x0,0x0,0x0,0x7,0x7,0x7,0x0,0x7,0x0,0x7,0x0,0x0,0x0,0x0,0x0,0x7,0x7,0x0,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public CMinus(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CMinus(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new CMinusTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 25; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 25; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public CMinus(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new CMinusTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 25; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 25; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public CMinus(CMinusTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 25; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
